--- a/index.html
+++ b/index.html
@@ -46,8 +46,13 @@
                 <p>HTML 5 & CSS Exercise</p>
                 <p>Holstee Manifesto "exists to encourage mindful living." Created by the founders of Holstee. Coded by me.</p>
              </div>
-             </div>
-      </section>
+
+             <div id="project-four">
+               <h4>Unplugged Retreat</h4>
+               <p>Responsive Web Desgin Project</p>
+               <p>Website for fictional retreat for tech companies using responsive web design, adaptive for mobile, tablet, and desktop</p>
+           </div> <!-- END OF FULL WIDTH -->
+      </section> <!--! END OF PROJECTS SECTION-->
 
       <!-- ABOUT -->
 
