css edits for responsive

--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
 
     <body>
 
-<!-- HEADER -->
+<!-- HEADER 
 
       <header>
         <div class="full-width">
           <h1>Hi There! I'm Carrie.</h1>
           <h2>I am a web developer, designer, and<br>creative thinker in High Point, North Carolina.</h2>
         </div>
-      </header>
+      </header>-->
+
+<!-- HERO AREA -->
+<section class="hero-area">
+  <div class="full-width">
+    <h1>Hi There! I'm Carrie.</h1>
+    <h2>I am a web developer, designer, and<br>creative thinker in High Point, North Carolina.</h2>
+  </div>
+</section>
 
 <!-- PORTFOIO -->
 
