css changes added nav

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 
     <body>
 
-<!-- HEADER 
+<!-- HEADER  -->
 
       <header>
-        <div class="full-width">
-          <h1>Hi There! I'm Carrie.</h1>
-          <h2>I am a web developer, designer, and<br>creative thinker in High Point, North Carolina.</h2>
-        </div>
-      </header>-->
+        <nav>
+          <ul>
+            <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+            <li><a href="about/index.html" target="_blank">About</a></li>
+          </ul>
+        </nav>
+
+      </header>
 
 <!-- HERO AREA -->
 <section class="hero-area">
