--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 <!-- HEADER  -->
 
       <header>
+        <div class="content-wrapper">
         <nav>
           <ul>
-            <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-            <li><a href="about/index.html" target="_blank">About</a></li>
+            <li><a href="#portfolio">Projects</a></li>
+            <li><a href="#info">About</a></li>
+            <li><a href="#socials">Contact</a></li>
           </ul>
         </nav>
-
+      </div>
       </header>
 
 <!-- HERO AREA -->
 <section class="hero-area">
-  <div class="full-width">
+  <div class="content-wrapper">
     <h1>Hi There! I'm Carrie.</h1>
     <h2>I am a web developer, designer, and<br>creative thinker in High Point, North Carolina.</h2>
   </div>
@@ -34,7 +36,7 @@
 
       <main>
 
-        <section class="projects">
+        <section class="projects" id="portfolio">
             <div class="full-width">
             <h3>My Portfolio</h3>
               <div id="project-one">
@@ -67,7 +69,7 @@
 
       <!-- ABOUT -->
 
-      <section class="about">
+      <section class="about" id="info">
         <div class="full-width">
           <div class="half-width">
             <h3>About Me</h3>
@@ -83,7 +85,7 @@
 
       <!-- CONTACT INFO -->
 
-      <section class="contact-info">
+      <section class="contact-info" id="socials">
         <div class="full-width">
           <h3>Let's Connect</h3>
          <div class="third-width">
