nav and hero mobile changes

--- a/index.html
+++ b/index.html
@@ -1,97 +1,123 @@
 <!doctype html>
-<html lang="en">
-    <head>
-      <meta name="viewport" content="width=device-width; initial-scale=.25;" charset="utf-8">
-      <title>Carrie C. Robbins</title>
-      <link rel="stylesheet" href="css/normalize.css">
-      <link rel="stylesheet" href="css/main.css">
-      <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
-    </head>
+<html class="no-js" lang="">
 
-    <body>
+<head>
+  <meta charset="utf-8">
+  <title>Carrie C. Robbins</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- HEADER  -->
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
 
-      <header>
-        <div class="content-wrapper">
-        <nav>
-          <ul>
-            <li><a href="#portfolio">Projects</a></li>
-            <li><a href="#info">About</a></li>
-            <li><a href="#socials">Contact</a></li>
-          </ul>
-        </nav>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+
+
+  <meta name="theme-color" content="#fafafa">
+</head>
+
+<body>
+  <!--[if IE]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+
+  <!-- Add your site or application content here -->
+
+  <!-- HEADER  -->
+
+  <header>
+    <div class="content-wrapper">
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#portfolio">Projects</a></li>
+          <li><a href="#info">About</a></li>
+          <li><a href="#socials">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- HERO AREA -->
+
+  <section class="hero-area">
+    <div class="content-wrapper">
+      <h1>Hi There! I'm Carrie.</h1>
+      <h2>I am a web developer, designer, and<br>creative thinker in High Point, North Carolina.</h2>
+    </div>
+  </section>
+
+  <!-- PORTFOIO -->
+
+  <main>
+    <section class="projects" id="portfolio">
+      <div class="content-wrapper">
+        <h3>My Projects</h3>
+        <div class="project-items">
+          <article>
+            <a href ="rogue-pickings-site/index.html" target="_blank"><img src ="img/rogue-pickings-thumbnail.png" alt="rogue pickings" class="imgs"/></a>
+            <h4>Rogue Pickings Website</h4>
+            <p class="project-description">HTML & CSS from Photoshop Design Comp
+                                          Landing page for a fictional food truck company.
+            </p>
+          </article>
+
+          <article>
+
+              <a href ="jubilee-austen-site/index.html" target="_blank"><img src="img/jubilee-thumbnail.png" alt="jubilee austen" class="imgs"/></a>
+
+            <h4>Jubilee Austen Profile</h4>
+            <p class="project-description">HTML 5 CSS Website
+                                          This is a sample of a simple profile page for a web developer.</p>
+          </article>
+
+          <article>
+            <a href = "holstee-manifesto/index.html" target="_blank"> <img src="img/holstee-thumbnail.png" alt="holstee manifesto" class="imgs"/></a>
+            <h4>Holstee Manifesto</h4>
+            <p class="project-description">HTML 5 & CSS Exercise
+                                          Holstee Manifesto "exists to encourage mindful living." Created by the founders of Holstee. Coded by me.</p>
+          </article>
+
+          <article>
+            <a href ="unplugged-retreat/index.html" target="_blank"><img src="img/unplugged-thumbnail.jpg" alt="unplugged retreat" class="imgs"/></a>
+            <h4>Unplugged Retreat</h4>
+            <p class="project-description">Responsive Web Desgin Project
+                                          Website for fictional retreat for tech companies using responsive web design, adaptive for mobile, tablet, and desktop</p>
+          </article>
+        </div>
+      </div><!-- END OF CONTENT-WRAPPER -->
+    </section> <!--! END OF PROJECTS SECTION-->
+
+  <!-- ABOUT -->
+
+    <section class="about" id="info">
+      <div class="full-width">
+        <div class="half-width">
+          <h3>About Me</h3>
+          <img src="img/profile-pic.png" alt="profile pic" class="imgs"/>
+          <p>I am passionate about the web</p>
+          <p> I started taking Skillcrush classes after a thorough and thoughtful search for a quality program for learning tech skills. With
+                the knowledge I've gained thus far and my never-ending curiosity for continued learning, I am committed to creating solid work.
+                I am passionate about writing clean code and building websites that are functional, user-friendly, and visually appealing.</p><br>
+          <p>Can't wait to work with you!</p>
+        </div>
       </div>
-      </header>
+    </section>
 
-<!-- HERO AREA -->
-<section class="hero-area">
-  <div class="content-wrapper">
-    <h1>Hi There! I'm Carrie.</h1>
-    <h2>I am a web developer, designer, and<br>creative thinker in High Point, North Carolina.</h2>
-  </div>
-</section>
+  <!-- CONTACT INFO -->
 
-<!-- PORTFOIO -->
-
-      <main>
-
-        <section class="projects" id="portfolio">
-            <div class="full-width">
-            <h3>My Portfolio</h3>
-              <div id="project-one">
-                <a href ="rogue-pickings-site/index.html" target="_blank"><img src ="img/rogue-pickings-thumbnail.png" alt="rogue pickings" class="imgs"/></a>
-                <h4>Rogue Pickings Website</h4>
-                <p>HTML & CSS from Photoshop Design Comp</p>
-                <p>Landing page for a fictional food truck company.</p>
-              </div>
-
-              <div id="project-two">
-                <a href ="jubilee-austen-site/index.html" target="_blank"><img src="img/jubilee-thumbnail.png" alt="jubilee austen" class="imgs"/></a>
-                <h4>Jubilee Austen Profile</h4>
-                <p>HTML 5 CSS Website</p>
-                <p>This is a sample of a simple profile page for a web developer.</p>
-              </div>
-
-              <div id="project-three">
-                <a href = "holstee-manifesto/index.html" target="_blank"> <img src="img/holstee-thumbnail.png" alt="holstee manifesto" class="imgs"/></a>
-                <h4>Holstee Manifesto</h4>
-                <p>HTML 5 & CSS Exercise</p>
-                <p>Holstee Manifesto "exists to encourage mindful living." Created by the founders of Holstee. Coded by me.</p>
-             </div>
-
-             <div id="project-four">
-               <h4>Unplugged Retreat</h4>
-               <p>Responsive Web Desgin Project</p>
-               <p>Website for fictional retreat for tech companies using responsive web design, adaptive for mobile, tablet, and desktop</p>
-           </div> <!-- END OF FULL WIDTH -->
-      </section> <!--! END OF PROJECTS SECTION-->
-
-      <!-- ABOUT -->
-
-      <section class="about" id="info">
-        <div class="full-width">
-          <div class="half-width">
-            <h3>About Me</h3>
-            <img src="img/profile-pic.png" alt="profile pic" class="imgs"/>
-            <p>I am passionate about the web</p>
-            <p> I started taking Skillcrush classes after a thorough and thoughtful search for a quality program for learning tech skills. With
-              the knowledge I've gained thus far and my never-ending curiosity for continued learning, I am committed to creating solid work.
-              I am passionate about writing clean code and building websites that are functional, user-friendly, and visually appealing.</p><br>
-            <p>Can't wait to work with you!</p>
-         </div>
-       </div>
-      </section>
-
-      <!-- CONTACT INFO -->
-
-      <section class="contact-info" id="socials">
-        <div class="full-width">
-          <h3>Let's Connect</h3>
-         <div class="third-width">
-            <h4>Hire Me</h4>
-            <!--<p>555-555-5555</p>-->
-            <p>hello@carriecrobbins.com</p>
+    <section class="contact-info" id="socials">
+      <div class="full-width">
+        <h3>Let's Connect</h3>
+        <div class="third-width">
+          <h4>Hire Me</h4>
+          <!--<p>555-555-5555</p>-->
+          <p>hello@carriecrobbins.com</p>
         </div>
 
         <div class="third-width">
@@ -105,17 +131,30 @@
           </nav>
         </div>
 
-          <div class="third-width">
-            <h4>Meet Me</h4>
-            <p>High Point, NC<br>
-              Let's go to meetups together!</p>
-          </div>
+        <div class="third-width">
+          <h4>Meet Me</h4>
+          <p>High Point, NC<br>
+            Let's go to meetups together!</p>
         </div>
-      </section>
+      </div>
+    </section>
+  </main>
 
-      <footer>
-        <h6>Copyright 2019 | Carrie Robbins</h6>
-      </footer>
-      </main>
-    </body>
+  <footer>
+    <h6>Copyright 2019 | Carrie Robbins</h6>
+  </footer>
+
+  <script src="js/vendor/modernizr-3.8.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+
+  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>
+</body>
 </html>
