--- a/index.html
+++ b/index.html
@@ -60,34 +60,34 @@
         <h3>My Projects</h3>
         <div class="project-items">
           <article>
-            <a href ="rogue-pickings-site/index.html" target="_blank"><img src ="img/rogue-pickings-thumbnail.png" alt="rogue pickings" class="imgs"/></a>
-            <h4>Rogue Pickings Website</h4>
-            <p class="project-description">HTML & CSS from Photoshop Design Comp
-                                          Landing page for a fictional food truck company.
+            <a href ="unplugged-retreat/index.html" target="_blank"><img src="img/unplugged-thumbnail.jpg" alt="unplugged retreat" class="imgs"/></a>
+            <h4>Unplugged Retreat</h4>
+            <p class="project-description">Website for fictional retreat for tech companies using
+                                            responsive web design, adapted for mobile, tablet, and desktop.
             </p>
           </article>
 
           <article>
+            <a href ="rogue-pickings-site/index.html" target="_blank"><img src ="img/rogue-pickings-thumbnail.png" alt="rogue pickings" class="imgs"/></a>
+            <h4>Rogue Pickings Website</h4>
+            <p class="project-description">Landing page for a fictional food truck company using
+                                            HTML & CSS and Photoshop design comp.
+            </p>
+          </article>
 
+          <article>
               <a href ="jubilee-austen-site/index.html" target="_blank"><img src="img/jubilee-thumbnail.png" alt="jubilee austen" class="imgs"/></a>
-
             <h4>Jubilee Austen Profile</h4>
-            <p class="project-description">HTML 5 CSS Website
-                                          This is a sample of a simple profile page for a web developer.</p>
+            <p class="project-description">Sample of a profile page for a web developer using HTML & CSS.
+            </p>
           </article>
 
           <article>
             <a href = "holstee-manifesto/index.html" target="_blank"> <img src="img/holstee-thumbnail.png" alt="holstee manifesto" class="imgs"/></a>
             <h4>Holstee Manifesto</h4>
-            <p class="project-description">HTML 5 & CSS Exercise
-                                          Holstee Manifesto "exists to encourage mindful living." Created by the founders of Holstee. Coded by me.</p>
-          </article>
-
-          <article>
-            <a href ="unplugged-retreat/index.html" target="_blank"><img src="img/unplugged-thumbnail.jpg" alt="unplugged retreat" class="imgs"/></a>
-            <h4>Unplugged Retreat</h4>
-            <p class="project-description">Responsive Web Desgin Project
-                                          Website for fictional retreat for tech companies using responsive web design, adaptive for mobile, tablet, and desktop</p>
+            <p class="project-description">HTML & CSS exercise using the Holstee Manifesto which
+                                          "exists to encourage mindful living." Created by the founders of Holstee.
+                                          Coded by me.</p>
           </article>
         </div>
       </div><!-- END OF CONTENT-WRAPPER -->
@@ -96,31 +96,33 @@
   <!-- ABOUT -->
 
     <section class="about" id="info">
-      <div class="full-width">
-        <div class="half-width">
+      <div class="content-wrapper">
           <h3>About Me</h3>
-          <img src="img/profile-pic.png" alt="profile pic" class="imgs"/>
-          <p>I am passionate about the web</p>
-          <p> I started taking Skillcrush classes after a thorough and thoughtful search for a quality program for learning tech skills. With
+          <article>
+            <figure>
+              <img src="img/profile-pic.png" alt="profile pic" class="imgs"/>
+            </figure>
+            <div>
+              <h4>I am passionate about the web</h4>
+              <p> I started taking Skillcrush classes after a thorough and thoughtful search for a quality program for learning tech skills. With
                 the knowledge I've gained thus far and my never-ending curiosity for continued learning, I am committed to creating solid work.
-                I am passionate about writing clean code and building websites that are functional, user-friendly, and visually appealing.</p><br>
-          <p>Can't wait to work with you!</p>
-        </div>
+                I am passionate about writing clean code and building websites that are functional, user-friendly, and visually appealing.
+              </p>
+              <p>Can't wait to work with you!</p>
+            </div>
+        </article>
       </div>
     </section>
 
   <!-- CONTACT INFO -->
 
-    <section class="contact-info" id="socials">
-      <div class="full-width">
+    <section class="contact-info">
+      <div class="content-wrapper">
         <h3>Let's Connect</h3>
-        <div class="third-width">
           <h4>Hire Me</h4>
           <!--<p>555-555-5555</p>-->
           <p>hello@carriecrobbins.com</p>
-        </div>
 
-        <div class="third-width">
           <h4>Follow Me</h4>
           <nav>
             <ul>
@@ -129,14 +131,11 @@
               <li><a href = "https://www.linkedin.com/in/carrie-c-robbins" target="_blank"><img src="img/linkedin.png" alt="linkedin icon"></a></li>
             </ul>
           </nav>
-        </div>
 
-        <div class="third-width">
           <h4>Meet Me</h4>
           <p>High Point, NC<br>
             Let's go to meetups together!</p>
         </div>
-      </div>
     </section>
   </main>
 
