started desktop responsive

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <!-- ABOUT -->
 
-    <section class="about" id="info">
+    <section class="about">
       <div class="content-wrapper">
           <h3>About Me</h3>
           <article>
