responsive changes for tablet and desktop

--- a/index.html
+++ b/index.html
@@ -63,34 +63,51 @@
         <h3>My Projects</h3>
         <div class="project-items">
           <article>
-            <a href ="unplugged-retreat/index.html" target="_blank"><img src="img/unplugged-thumbnail.jpg" alt="unplugged retreat" class="imgs"/></a>
+            <figure>
+              <a href ="unplugged-retreat/index.html" target="_blank"><img src="img/unplugged-thumbnail.jpg" alt="unplugged retreat" class="imgs"/></a>
+            </figure>
+            <div>
             <h4>Unplugged Retreat</h4>
             <p class="project-description">Website for fictional retreat for tech companies using
                                             responsive web design, adapted for mobile, tablet, and desktop.
             </p>
+          </div>
           </article>
 
           <article>
+            <figure>
             <a href ="rogue-pickings-site/index.html" target="_blank"><img src ="img/rogue-pickings-thumbnail.png" alt="rogue pickings" class="imgs"/></a>
+          </figure>
+          <div>
             <h4>Rogue Pickings Website</h4>
             <p class="project-description">Landing page for a fictional food truck company using
                                             HTML & CSS and Photoshop design comp.
             </p>
+          </div>
           </article>
 
           <article>
+            <figure>
               <a href ="jubilee-austen-site/index.html" target="_blank"><img src="img/jubilee-thumbnail.png" alt="jubilee austen" class="imgs"/></a>
+            </figure>
+            <div>
             <h4>Jubilee Austen Profile</h4>
             <p class="project-description">Sample of a profile page for a web developer using HTML & CSS.
             </p>
+          </div>
           </article>
 
           <article>
-            <a href = "holstee-manifesto/index.html" target="_blank"> <img src="img/holstee-thumbnail.png" alt="holstee manifesto" class="imgs"/></a>
-            <h4>Holstee Manifesto</h4>
-            <p class="project-description">HTML & CSS exercise using the Holstee Manifesto which
+            <figure>
+              <a href = "holstee-manifesto/index.html" target="_blank"> <img src="img/holstee-thumbnail.png" alt="holstee manifesto" class="imgs"/></a>
+            </figure>
+            <div>
+              <h4>Holstee Manifesto</h4>
+              <p class="project-description">HTML & CSS exercise using the Holstee Manifesto which
                                           "exists to encourage mindful living." Created by the founders of Holstee.
-                                          Coded by me.</p>
+                                          Coded by me.
+              </p>
+            </div>
           </article>
         </div>
       </div><!-- END OF CONTENT-WRAPPER -->
