--- a/index.html
+++ b/index.html
@@ -139,9 +139,17 @@
     <section class="contact-info" id="socials">
       <div class="content-wrapper">
         <h3>Let's Connect</h3>
+
+        <div class="information">
+        <address class="contact">
         <h4>Hire Me</h4>
         <p><a href = "mailto:hello@carriecrobbins.com" target="_blank">hello@carriecrobbins.com</a></p>
+        <p>High Point, NC<br>
+          Let's go to meetups together!
+        </p>
+        </address>
 
+        <div class="social-media">
         <h4>Follow Me</h4>
         <div class="social-icons">
           <p>
@@ -156,16 +164,14 @@
             <a href = "https://www.linkedin.com/in/carrie-c-robbins" target="_blank"><i class="fab fa-linkedin" alt="linkedin icon"></i></a>
           </p>
         </div>
-
-        <p>High Point, NC<br>
-          Let's go to meetups together!
-        </p>
+      </div>
+    </div>
       </div>
     </section>
   </main>
 
   <footer>
-    <h6>Copyright 2019 | Carrie Robbins</h6>
+    <h6>Copyright 2020 | Carrie Robbins</h6>
   </footer>
 
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
