--- a/index.html
+++ b/index.html
@@ -109,6 +109,39 @@
               </p>
             </div>
           </article>
+
+          <article>
+            <figure>
+                <a href = "lolcat-clock/index.html" target="_blank"> <img src="img/lolcat-thumbnail.png" alt="lolcat clock" class="imgs"/></a>
+            </figure>
+                <div>
+                    <h4>LOL Cat Clock</h4>
+                    <p class = "project-description">Exercise using HTML, CSS, and JavaScript.
+                    </p>
+                </div>
+            </article>
+
+             <article>
+            <figure>
+                <a href = "magic-8-ball/index.html" target="_blank"> <img src="img/magic-8-ball-thumbnail.png" alt="magic 8 ball" class="imgs"/></a>
+            </figure>
+                <div>
+                    <h4>Magic 8 Ball</h4>
+                    <p class = "project-description">Exercise using HTML, CSS, JavaScript and jQuery.
+                    </p>
+                </div>
+            </article>
+
+               <article>
+            <figure>
+                <a href = "election-map/index.html" target="_blank"> <img src="img/election-map-thumbnail.png" alt="eleciton map" class="imgs"/></a>
+            </figure>
+                <div>
+                    <h4>Election Map</h4>
+                    <p class = "project-description">Exercise using HTML, CSS, and JavaScript.
+                    </p>
+                </div>
+            </article>
         </div>
       </div><!-- END OF CONTENT-WRAPPER -->
     </section> <!--! END OF PROJECTS SECTION-->
@@ -123,10 +156,10 @@
               <img src="img/profile-pic.png" alt="profile pic" class="imgs"/>
             </figure>
             <div>
-              <h4>I am passionate about the web.</h4>
+              <h4></h4>
               <p> I started taking Skillcrush classes after a thorough and thoughtful search for a quality program for learning tech skills. With
                 the knowledge I've gained thus far and my never-ending curiosity for continued learning, I am committed to creating solid work.
-                I am passionate about writing clean code and building websites that are functional, user-friendly, and visually appealing.
+                I am passionate about writing clean code and building websites that are functional, user-friendly, and visually appealing. <!--View my full                    resume <a href="http://www.carriecrobbins.com/documents/carrie-robbins-resume0404.pdf">here</a>.-->
               </p>
               <p>Can't wait to work with you!</p>
             </div>
