added project folders

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
           <article>
             <figure>
-            <a href ="rogue-pickings-site/index.html" target="_blank"><img src ="img/rogue-pickings-thumbnail.png" alt="rogue pickings" class="imgs"/></a>
+            <a href ="rogue-pickings/index.html" target="_blank"><img src ="img/rogue-pickings-thumbnail.png" alt="rogue pickings" class="imgs"/></a>
           </figure>
           <div>
             <h4>Rogue Pickings Website</h4>
@@ -88,7 +88,7 @@
 
           <article>
             <figure>
-              <a href ="jubilee-austen-site/index.html" target="_blank"><img src="img/jubilee-thumbnail.png" alt="jubilee austen" class="imgs"/></a>
+              <a href ="jubilee-austen/index.html" target="_blank"><img src="img/jubilee-thumbnail.png" alt="jubilee austen" class="imgs"/></a>
             </figure>
             <div>
             <h4>Jubilee Austen Profile</h4>
