linked retreat website

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="project-items">
           <article>
             <figure>
-              <a href ="unplugged-retreat/index.html" target="_blank"><img src="img/unplugged-thumbnail.jpg" alt="unplugged retreat" class="imgs"/></a>
+              <a href ="https://ccrobbins.github.io/unplugged-retreat/" target="_blank"><img src="img/unplugged-thumbnail.jpg" alt="unplugged retreat" class="imgs"/></a>
             </figure>
             <div>
             <h4>Unplugged Retreat</h4>
