added rogue pickings website

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
           <article>
             <figure>
-            <a href ="rogue-pickings/index.html" target="_blank"><img src ="img/rogue-pickings-thumbnail.png" alt="rogue pickings" class="imgs"/></a>
+            <a href = "https://ccrobbins.github.io/206-rogue-pickings/" target="_blank"><img src ="img/rogue-pickings-thumbnail.png" alt="rogue pickings" class="imgs"/></a>
           </figure>
           <div>
             <h4>Rogue Pickings Website</h4>
