updates to links and added button

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="content-wrapper">
       <h1>Hi There! I'm Carrie.</h1>
       <h2>I am a web developer, designer, and<br>creative thinker in High Point, North Carolina.</h2>
-    </div>
+      <button type="button"><a href="#portfolio">My Projects</button>
   </section>
 
   <!-- PORTFOIO -->
@@ -97,6 +97,7 @@
           </div>
           </article>
 
+<!--
           <article>
             <figure>
               <a href = "holstee-manifesto/index.html" target="_blank"> <img src="img/holstee-thumbnail.png" alt="holstee manifesto" class="imgs"/></a>
@@ -109,6 +110,7 @@
               </p>
             </div>
           </article>
+-->
 
           <article>
             <figure>
@@ -175,10 +177,10 @@
 
         <div class="information">
         <address class="contact">
-        <h4>Hire Me</h4>
-        <p><a href = "mailto:hello@carriecrobbins.com" target="_blank">hello@carriecrobbins.com</a></p>
+        <h4>Contact Me</h4>
+        <p><a href = "mailto:carrie.c.robbins@gmail.com" target="_blank">carrie.c.robbins@gmail.com</a></p>
         <p>High Point, NC<br>
-          Let's go to meetups together!
+          <!--Let's go to meetups together!-->
         </p>
         </address>
 
