--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="content-wrapper">
       <h1>Hi There! I'm Carrie.</h1>
       <h2>I am a web developer, designer, and<br>creative thinker in High Point, North Carolina.</h2>
-      <button type="button"><a href="#portfolio">My Projects</button>
+      <!--<button type="button"><a href="#portfolio">My Projects</button>-->
   </section>
 
   <!-- PORTFOIO -->
